--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,3 +7,14 @@ add_executable(LeetCodeWIthCpp main.cpp)
 add_executable(lengthOfLongestSubstring 3.lengthOfLongestSubstring.cpp)
 add_executable(twoSum 1.twoSum.cpp)
 add_executable(minMoves 453.minMoves.cpp)
+add_executable(WordDictionary 211.WordDictionary.cpp)
+add_executable(findMedianSortedArrays 4.findMedianSortedArrays.cpp)
+add_executable(plusOne 66.plusOne.cpp)
+add_executable(fib 509.fib.cpp)
+add_executable(majorityElement 229.majorityElement.cpp)
+add_executable(searchMatrix 240.searchMatrix.cpp)
+add_executable(tribonacci 1137.tribonacci.cpp)
+add_executable(climbStairs 70.climbStairs.cpp)
+add_executable(minCostClimbingStairs 746.minCostClimbingStairs.cpp)
+add_executable(rob 198.rob.cpp)
+add_executable(rob2 213.rob.cpp)
