--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,10 @@
 cmake_minimum_required(VERSION 2.8)
 project(LeetCodeWIthCpp)
 
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14")
 
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x")
+#set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
+#set(CMAKE_CXX_STANDARD 20)
 add_executable(LeetCodeWIthCpp main.cpp)
 add_executable(lengthOfLongestSubstring 3.lengthOfLongestSubstring.cpp)
 add_executable(twoSum 1.twoSum.cpp)
@@ -18,3 +20,10 @@ add_executable(climbStairs 70.climbStairs.cpp)
 add_executable(minCostClimbingStairs 746.minCostClimbingStairs.cpp)
 add_executable(rob 198.rob.cpp)
 add_executable(rob2 213.rob.cpp)
+add_executable(nextGreaterElement 496.nextGreaterElement.cpp)
+add_executable(deleteAndEarn 740.deleteAndEarn.cpp)
+add_executable(removeInvalidParentheses 301.removeInvalidParentheses.cpp)
+add_executable(deleteNode 237.deleteNode.cpp)
+add_executable(longestSubsequence 1218.longestSubsequence.cpp)
+add_executable(managearray ManageArray.cpp ManageArray.h)
+add_executable(maxCount 598.maxCount.cpp)
