--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,10 +1,10 @@
-cmake_minimum_required(VERSION 2.8)
+cmake_minimum_required(VERSION 2.9)
 project(LeetCodeWIthCpp)
 
 
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x")
+#set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x")
 #set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
-#set(CMAKE_CXX_STANDARD 20)
+set(CMAKE_CXX_STANDARD 20)
 add_executable(LeetCodeWIthCpp main.cpp)
 add_executable(lengthOfLongestSubstring 3.lengthOfLongestSubstring.cpp)
 add_executable(twoSum 1.twoSum.cpp)
@@ -27,3 +27,8 @@ add_executable(deleteNode 237.deleteNode.cpp)
 add_executable(longestSubsequence 1218.longestSubsequence.cpp)
 add_executable(managearray ManageArray.cpp ManageArray.h)
 add_executable(maxCount 598.maxCount.cpp)
+add_executable(missingNumber 268.missingNumber.cpp)
+add_executable(findMinStep 488.findMinStep.cpp)
+add_executable(kInversePairs 629.kInversePairs.cpp)
+add_executable(originalDigits 423.originalDigits.cpp)
+add_executable(searchBST 700.searchBST.cpp)
