https://leetcode-cn.com/problems/remove-palindromic-subsequences/comments/

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -32,3 +32,4 @@ add_executable(kInversePairs 629.kInversePairs.cpp)
 add_executable(originalDigits 423.originalDigits.cpp)
 add_executable(searchBST 700.searchBST.cpp)
 add_executable(removePalindromeSub 1332.removePalindromeSub.cpp)
+add_executable(minJumps 1345.minJumps.cpp)
