--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -35,3 +35,5 @@ add_executable(searchBST 700.searchBST.cpp)
 add_executable(removePalindromeSub 1332.removePalindromeSub.cpp)
 add_executable(minJumps 1345.minJumps.cpp)
 add_executable(StockPrice 2034.StockPrice.cpp)
+add_executable(validTicTacToe 794.validTicTacToe.cpp)
+add_executable(numberOfMatches 1688.numberOfMatches.cpp)
