https://leetcode-cn.com/problems/detect-squares/

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -39,3 +39,4 @@ add_executable(minJumps 1345.minJumps.cpp)
 add_executable(StockPrice 2034.StockPrice.cpp)
 add_executable(validTicTacToe 794.validTicTacToe.cpp)
 add_executable(numberOfMatches 1688.numberOfMatches.cpp)
+add_executable(DetectSquares 2031.DetectSquares.cpp)
