https://leetcode-cn.com/problems/single-element-in-a-sorted-array/

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -41,3 +41,4 @@ add_executable(validTicTacToe 794.validTicTacToe.cpp)
 add_executable(numberOfMatches 1688.numberOfMatches.cpp)
 add_executable(DetectSquares 2031.DetectSquares.cpp)
 add_executable(minimumDifference 1984.minimumDifference.cpp)
+add_executable(singleNonDuplicate 540.singleNonDuplicate.cpp)
