--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -43,3 +43,4 @@ add_executable(numberOfMatches 1688.numberOfMatches.cpp)
 add_executable(DetectSquares 2031.DetectSquares.cpp)
 add_executable(minimumDifference 1984.minimumDifference.cpp)
 add_executable(singleNonDuplicate 540.singleNonDuplicate.cpp)
+add_executable(luckyNumbers 1380.luckyNumbers.cpp)
