https://leetcode-cn.com/problems/where-will-the-ball-fall/

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -44,3 +44,4 @@ add_executable(DetectSquares 2031.DetectSquares.cpp)
 add_executable(minimumDifference 1984.minimumDifference.cpp)
 add_executable(singleNonDuplicate 540.singleNonDuplicate.cpp)
 add_executable(luckyNumbers 1380.luckyNumbers.cpp)
+add_executable(findBall 1706.findBall.cpp)
