https://leetcode-cn.com/problems/find-the-closest-palindrome/

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -46,3 +46,5 @@ add_executable(singleNonDuplicate 540.singleNonDuplicate.cpp)
 add_executable(luckyNumbers 1380.luckyNumbers.cpp)
 add_executable(findBall 1706.findBall.cpp)
 add_executable(knightProbability 688.knightProbability.cpp)
+add_executable(maximumRequests 1601.maximumRequests.cpp)
+add_executable(nearestPalindromic 564.nearestPalindromic.cpp)
