https://leetcode-cn.com/problems/add-digits/

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -48,3 +48,4 @@ add_executable(findBall 1706.findBall.cpp)
 add_executable(knightProbability 688.knightProbability.cpp)
 add_executable(maximumRequests 1601.maximumRequests.cpp)
 add_executable(nearestPalindromic 564.nearestPalindromic.cpp)
+add_executable(addDigits 258.addDigits.cpp)
