https://leetcode-cn.com/problems/plates-between-candles/

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -49,3 +49,5 @@ add_executable(knightProbability 688.knightProbability.cpp)
 add_executable(maximumRequests 1601.maximumRequests.cpp)
 add_executable(nearestPalindromic 564.nearestPalindromic.cpp)
 add_executable(addDigits 258.addDigits.cpp)
+add_executable(subArrayRanges 2104.subArrayRanges.cpp)
+add_executable(platesBetweenCandles 2055.platesBetweenCandles.cpp)
