--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -46,9 +46,11 @@ add_executable(singleNonDuplicate 540.singleNonDuplicate.cpp)
 add_executable(luckyNumbers 1380.luckyNumbers.cpp)
 add_executable(findBall 1706.findBall.cpp)
 add_executable(knightProbability 688.knightProbability.cpp)
+add_executable(pancakeSort 969.pancakeSort.cpp)
 add_executable(maximumRequests 1601.maximumRequests.cpp)
 add_executable(nearestPalindromic 564.nearestPalindromic.cpp)
 add_executable(addDigits 258.addDigits.cpp)
 add_executable(subArrayRanges 2104.subArrayRanges.cpp)
 add_executable(platesBetweenCandles 2055.platesBetweenCandles.cpp)
 add_executable(findLUSlength 521.findLUSlength.cpp)
+add_executable(calPoints 682.calPoints.cpp)
