https://leetcode-cn.com/problems/maximize-the-confusion-of-an-exam/ 附上官方题解 我是菜狗

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -55,3 +55,4 @@ add_executable(platesBetweenCandles 2055.platesBetweenCandles.cpp)
 add_executable(findLUSlength 521.findLUSlength.cpp)
 add_executable(calPoints 682.calPoints.cpp)
 add_executable(hasAlternatingBits 693.hasAlternatingBits.cpp)
+add_executable(maxConsecutiveAnswers 2024.maxConsecutiveAnswers.cpp)
