--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -55,3 +55,4 @@ add_executable(calPoints 682.calPoints.cpp)
 add_executable(hasAlternatingBits 693.hasAlternatingBits.cpp)
 add_executable(maxConsecutiveAnswers 2024.maxConsecutiveAnswers.cpp)
 add_executable(busiestServers 1606.busiestServers.cpp)
+add_executable(selfDividingNumbers 728.selfDividingNumbers.cpp)
