--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -56,3 +56,4 @@ add_executable(busiestServers 1606.busiestServers.cpp)
 add_executable(selfDividingNumbers 728.selfDividingNumbers.cpp)
 add_executable(canReorderDoubled 954.canReorderDoubled.cpp)
 add_executable(numberOfLines 806.numberOfLines.cpp)
+add_executable(sumRootToLeaf 1022.sumRootToLeaf.cpp)
