https://leetcode.cn/problems/encode-and-decode-tinyurl/

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -57,3 +57,5 @@ add_executable(selfDividingNumbers 728.selfDividingNumbers.cpp)
 add_executable(canReorderDoubled 954.canReorderDoubled.cpp)
 add_executable(numberOfLines 806.numberOfLines.cpp)
 add_executable(sumRootToLeaf 1022.sumRootToLeaf.cpp)
+add_executable(findSubstring 30.findSubstring.cpp)
+add_executable(encode-and-decode-tinyurl 536.encode-and-decode-tinyurl.cpp)
