--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -62,3 +62,4 @@ add_executable(encode-and-decode-tinyurl 536.encode-and-decode-tinyurl.cpp)
 add_executable(MyCalendarTwo 731.MyCalendarTwo.cpp)
 add_executable(shiftGrid 1260.shiftGrid.cpp)
 add_executable(fractionAddition 592.fractionAddition.cpp)
+add_executable(validSquare 593.validSquare.cpp)
