https://leetcode.cn/problems/reformat-the-string/

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -63,3 +63,5 @@ add_executable(MyCalendarTwo 731.MyCalendarTwo.cpp)
 add_executable(shiftGrid 1260.shiftGrid.cpp)
 add_executable(fractionAddition 592.fractionAddition.cpp)
 add_executable(validSquare 593.validSquare.cpp)
+add_executable(generateTheString 1374.generateTheString.cpp)
+add_executable(reformat 1417.reformat.cpp)
