https://leetcode.cn/problems/minimum-value-to-get-positive-step-by-step-sum/

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -65,3 +65,4 @@ add_executable(fractionAddition 592.fractionAddition.cpp)
 add_executable(validSquare 593.validSquare.cpp)
 add_executable(generateTheString 1374.generateTheString.cpp)
 add_executable(reformat 1417.reformat.cpp)
+add_executable(minStartValue 1413.minStartValue.cpp)
