https://leetcode.cn/problems/design-circular-deque/

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -66,3 +66,5 @@ add_executable(validSquare 593.validSquare.cpp)
 add_executable(generateTheString 1374.generateTheString.cpp)
 add_executable(reformat 1417.reformat.cpp)
 add_executable(minStartValue 1413.minStartValue.cpp)
+add_executable(groupThePeople 1282.groupThePeople.cpp)
+add_executable(MyCircularDeque 641.MyCircularDeque.cpp)
