--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -68,3 +68,5 @@ add_executable(reformat 1417.reformat.cpp)
 add_executable(minStartValue 1413.minStartValue.cpp)
 add_executable(groupThePeople 1282.groupThePeople.cpp)
 add_executable(MyCircularDeque 641.MyCircularDeque.cpp)
+add_executable(OrderedStream 1656.OrderedStream.cpp)
+add_executable(deepestLeavesSum 1302.deepestLeavesSum.cpp)
