https://leetcode.cn/problems/number-of-students-doing-homework-at-a-given-time/

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -70,3 +70,5 @@ add_executable(groupThePeople 1282.groupThePeople.cpp)
 add_executable(MyCircularDeque 641.MyCircularDeque.cpp)
 add_executable(OrderedStream 1656.OrderedStream.cpp)
 add_executable(deepestLeavesSum 1302.deepestLeavesSum.cpp)
+add_executable(maxEqualFreq 1224.maxEqualFreq.cpp)
+add_executable(busyStudent 1450.busyStudent.cpp)
