--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -72,3 +72,4 @@ add_executable(OrderedStream 1656.OrderedStream.cpp)
 add_executable(deepestLeavesSum 1302.deepestLeavesSum.cpp)
 add_executable(maxEqualFreq 1224.maxEqualFreq.cpp)
 add_executable(busyStudent 1450.busyStudent.cpp)
+add_executable(areAlmostEqual 1790.areAlmostEqual.cpp)
