https://leetcode.cn/problems/max-chunks-to-make-sorted/

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -73,3 +73,4 @@ add_executable(deepestLeavesSum 1302.deepestLeavesSum.cpp)
 add_executable(maxEqualFreq 1224.maxEqualFreq.cpp)
 add_executable(busyStudent 1450.busyStudent.cpp)
 add_executable(areAlmostEqual 1790.areAlmostEqual.cpp)
+add_executable(maxChunksToSorted 769.maxChunksToSorted.cpp)
