--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -74,3 +74,4 @@ add_executable(maxEqualFreq 1224.maxEqualFreq.cpp)
 add_executable(busyStudent 1450.busyStudent.cpp)
 add_executable(areAlmostEqual 1790.areAlmostEqual.cpp)
 add_executable(maxChunksToSorted 769.maxChunksToSorted.cpp)
+add_executable(totalFruit 904.totalFruit.cpp)
