--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -75,3 +75,4 @@ add_executable(busyStudent 1450.busyStudent.cpp)
 add_executable(areAlmostEqual 1790.areAlmostEqual.cpp)
 add_executable(maxChunksToSorted 769.maxChunksToSorted.cpp)
 add_executable(totalFruit 904.totalFruit.cpp)
+add_executable(countEven 2180.countEven.cpp)
