https://leetcode.cn/problems/zui-chang-bu-han-zhong-fu-zi-fu-de-zi-zi-fu-chuan-lcof/

--- a/offer/CMakeLists.txt
+++ b/offer/CMakeLists.txt
@@ -3,3 +3,4 @@ add_executable(30.MinStack 30.MinStack.cpp)
 add_executable(35.copyRandomList 35.copyRandomList.cpp)
 add_executable(47.maxValue 47.maxValue.cpp)
 add_executable(46.translateNum 46.translateNum.cpp)
+add_executable(48.lengthOfLongestSubstring 48.lengthOfLongestSubstring.cpp)
