--- a/offer/CMakeLists.txt
+++ b/offer/CMakeLists.txt
@@ -4,3 +4,4 @@ add_executable(35.copyRandomList 35.copyRandomList.cpp)
 add_executable(47.maxValue 47.maxValue.cpp)
 add_executable(46.translateNum 46.translateNum.cpp)
 add_executable(48.lengthOfLongestSubstring 48.lengthOfLongestSubstring.cpp)
+add_executable(58.1.reverseWords 58.1.reverseWords.cpp)
