--- a/offer/CMakeLists.txt
+++ b/offer/CMakeLists.txt
@@ -5,3 +5,5 @@ add_executable(47.maxValue 47.maxValue.cpp)
 add_executable(46.translateNum 46.translateNum.cpp)
 add_executable(48.lengthOfLongestSubstring 48.lengthOfLongestSubstring.cpp)
 add_executable(58.1.reverseWords 58.1.reverseWords.cpp)
+add_executable(12.exist 12.exist.cpp)
+add_executable(41.MedianFinder 41.MedianFinder.cpp)
