--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -88,3 +88,4 @@ add_executable(maxScoreWords 1255.maxScoreWords.cpp)
 add_executable(largestLocal 2373.largestLocal.cpp)
 add_executable(getFolderNames 1487.getFolderNames.cpp)
 add_executable(minNumberOfHours 2383.minNumberOfHours.cpp)
+add_executable(1615.maximalNetworkRank 1615.maximalNetworkRank.cpp)
