https://leetcode.cn/problems/count-subarrays-with-median-k/

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -89,3 +89,4 @@ add_executable(largestLocal 2373.largestLocal.cpp)
 add_executable(getFolderNames 1487.getFolderNames.cpp)
 add_executable(minNumberOfHours 2383.minNumberOfHours.cpp)
 add_executable(1615.maximalNetworkRank 1615.maximalNetworkRank.cpp)
+add_executable(2488.countSubarrays 2488.countSubarrays.cpp)
