--- a/offer/CMakeLists.txt
+++ b/offer/CMakeLists.txt
@@ -9,3 +9,4 @@ add_executable(12.exist 12.exist.cpp)
 add_executable(41.MedianFinder 41.MedianFinder.cpp)
 add_executable(53.1.search 53.1.search.cpp)
 add_executable(57.twoSum 57.twoSum.cpp)
+add_executable(56.1.singleNumbers 56.1.singleNumbers.cpp)
