https://leetcode.cn/problems/shu-zu-zhong-chu-xian-ci-shu-chao-guo-yi-ban-de-shu-zi-lcof/

--- a/offer/CMakeLists.txt
+++ b/offer/CMakeLists.txt
@@ -10,3 +10,5 @@ add_executable(41.MedianFinder 41.MedianFinder.cpp)
 add_executable(53.1.search 53.1.search.cpp)
 add_executable(57.twoSum 57.twoSum.cpp)
 add_executable(56.1.singleNumbers 56.1.singleNumbers.cpp)
+add_executable(56.2.singleNumber 56.2.singleNumber.cpp)
+add_executable(39.majorityElement 39.majorityElement.cpp)
