https://leetcode.cn/problems/gou-jian-cheng-ji-shu-zu-lcof/

--- a/offer/CMakeLists.txt
+++ b/offer/CMakeLists.txt
@@ -12,3 +12,4 @@ add_executable(57.twoSum 57.twoSum.cpp)
 add_executable(56.1.singleNumbers 56.1.singleNumbers.cpp)
 add_executable(56.2.singleNumber 56.2.singleNumber.cpp)
 add_executable(39.majorityElement 39.majorityElement.cpp)
+add_executable(66.constructArr 66.constructArr.cpp)
