https://leetcode.cn/problems/dui-lie-de-zui-da-zhi-lcof/

--- a/offer/CMakeLists.txt
+++ b/offer/CMakeLists.txt
@@ -13,3 +13,6 @@ add_executable(56.1.singleNumbers 56.1.singleNumbers.cpp)
 add_executable(56.2.singleNumber 56.2.singleNumber.cpp)
 add_executable(39.majorityElement 39.majorityElement.cpp)
 add_executable(66.constructArr 66.constructArr.cpp)
+add_executable(14.1.cuttingRope 14.1.cuttingRope.cpp)
+add_executable(59.maxSlidingWindow 59.maxSlidingWindow.cpp)
+add_executable(59.MaxQueue 59.MaxQueue.cpp)
