https://leetcode.cn/problems/zi-fu-chuan-de-pai-lie-lcof/

--- a/offer/CMakeLists.txt
+++ b/offer/CMakeLists.txt
@@ -16,3 +16,4 @@ add_executable(66.constructArr 66.constructArr.cpp)
 add_executable(14.1.cuttingRope 14.1.cuttingRope.cpp)
 add_executable(59.maxSlidingWindow 59.maxSlidingWindow.cpp)
 add_executable(59.MaxQueue 59.MaxQueue.cpp)
+add_executable(38.permutation 38.permutation.cpp)
