https://leetcode.cn/problems/find-subarrays-with-equal-sum/

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -90,3 +90,7 @@ add_executable(getFolderNames 1487.getFolderNames.cpp)
 add_executable(minNumberOfHours 2383.minNumberOfHours.cpp)
 add_executable(1615.maximalNetworkRank 1615.maximalNetworkRank.cpp)
 add_executable(2488.countSubarrays 2488.countSubarrays.cpp)
+add_executable(1616.checkPalindromeFormation 1616.checkPalindromeFormation.cpp)
+add_executable(1626.bestTeamScore 1626.bestTeamScore.cpp)
+add_executable(1574.findLengthOfShortestSubarray 1574.findLengthOfShortestSubarray.cpp)
+add_executable(2395.findSubarrays 2395.findSubarrays.cpp)
