--- a/offer/CMakeLists.txt
+++ b/offer/CMakeLists.txt
@@ -17,3 +17,4 @@ add_executable(14.1.cuttingRope 14.1.cuttingRope.cpp)
 add_executable(59.maxSlidingWindow 59.maxSlidingWindow.cpp)
 add_executable(59.MaxQueue 59.MaxQueue.cpp)
 add_executable(38.permutation 38.permutation.cpp)
+add_executable(49.nthUglyNumber 49.nthUglyNumber.cpp)
