https://leetcode.cn/problems/merge-sorted-array/

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,91 +6,12 @@ include_directories(comm)
 
 add_subdirectory(offer)
 
+aux_source_directory(${PROJECT_SOURCE_DIR} SRC_LIST)
+
+foreach(var ${SRC_LIST})
+    string(REGEX REPLACE ".*/" "" var ${var})
+    string(REGEX REPLACE ".cpp" "" tgt ${var})
+    add_executable(${tgt} ${var})
+endforeach(var)
 
 add_subdirectory(Thread)
-add_executable(LeetCodeWIthCpp main.cpp)
-add_executable(lengthOfLongestSubstring 3.lengthOfLongestSubstring.cpp)
-add_executable(twoSum 1.twoSum.cpp)
-add_executable(minMoves 453.minMoves.cpp)
-add_executable(WordDictionary 211.WordDictionary.cpp)
-add_executable(findMedianSortedArrays 4.findMedianSortedArrays.cpp)
-add_executable(plusOne 66.plusOne.cpp)
-add_executable(fib 509.fib.cpp)
-add_executable(majorityElement 229.majorityElement.cpp)
-add_executable(searchMatrix 240.searchMatrix.cpp)
-add_executable(tribonacci 1137.tribonacci.cpp)
-add_executable(climbStairs 70.climbStairs.cpp)
-add_executable(minCostClimbingStairs 746.minCostClimbingStairs.cpp)
-add_executable(rob 198.rob.cpp)
-add_executable(rob2 213.rob.cpp)
-add_executable(nextGreaterElement 496.nextGreaterElement.cpp)
-add_executable(deleteAndEarn 740.deleteAndEarn.cpp)
-add_executable(removeInvalidParentheses 301.removeInvalidParentheses.cpp)
-add_executable(deleteNode 237.deleteNode.cpp)
-add_executable(longestSubsequence 1218.longestSubsequence.cpp)
-add_executable(managearray ManageArray.cpp ManageArray.h)
-add_executable(maxCount 598.maxCount.cpp)
-add_executable(missingNumber 268.missingNumber.cpp)
-add_executable(findMinStep 488.findMinStep.cpp)
-add_executable(kInversePairs 629.kInversePairs.cpp)
-add_executable(originalDigits 423.originalDigits.cpp)
-add_executable(searchBST 700.searchBST.cpp)
-add_executable(removePalindromeSub 1332.removePalindromeSub.cpp)
-add_executable(minJumps 1345.minJumps.cpp)
-add_executable(StockPrice 2034.StockPrice.cpp)
-add_executable(maxNumberOfBalloons 1189.maxNumberOfBalloons.cpp)
-add_executable(validTicTacToe 794.validTicTacToe.cpp)
-add_executable(numberOfMatches 1688.numberOfMatches.cpp)
-add_executable(DetectSquares 2031.DetectSquares.cpp)
-add_executable(minimumDifference 1984.minimumDifference.cpp)
-add_executable(singleNonDuplicate 540.singleNonDuplicate.cpp)
-add_executable(luckyNumbers 1380.luckyNumbers.cpp)
-add_executable(findBall 1706.findBall.cpp)
-add_executable(knightProbability 688.knightProbability.cpp)
-add_executable(pancakeSort 969.pancakeSort.cpp)
-add_executable(maximumRequests 1601.maximumRequests.cpp)
-add_executable(nearestPalindromic 564.nearestPalindromic.cpp)
-add_executable(addDigits 258.addDigits.cpp)
-add_executable(subArrayRanges 2104.subArrayRanges.cpp)
-add_executable(platesBetweenCandles 2055.platesBetweenCandles.cpp)
-add_executable(findLUSlength 521.findLUSlength.cpp)
-add_executable(calPoints 682.calPoints.cpp)
-add_executable(hasAlternatingBits 693.hasAlternatingBits.cpp)
-add_executable(maxConsecutiveAnswers 2024.maxConsecutiveAnswers.cpp)
-add_executable(busiestServers 1606.busiestServers.cpp)
-add_executable(selfDividingNumbers 728.selfDividingNumbers.cpp)
-add_executable(canReorderDoubled 954.canReorderDoubled.cpp)
-add_executable(numberOfLines 806.numberOfLines.cpp)
-add_executable(sumRootToLeaf 1022.sumRootToLeaf.cpp)
-add_executable(findSubstring 30.findSubstring.cpp)
-add_executable(encode-and-decode-tinyurl 536.encode-and-decode-tinyurl.cpp)
-add_executable(MyCalendarTwo 731.MyCalendarTwo.cpp)
-add_executable(shiftGrid 1260.shiftGrid.cpp)
-add_executable(fractionAddition 592.fractionAddition.cpp)
-add_executable(validSquare 593.validSquare.cpp)
-add_executable(generateTheString 1374.generateTheString.cpp)
-add_executable(reformat 1417.reformat.cpp)
-add_executable(minStartValue 1413.minStartValue.cpp)
-add_executable(groupThePeople 1282.groupThePeople.cpp)
-add_executable(MyCircularDeque 641.MyCircularDeque.cpp)
-add_executable(OrderedStream 1656.OrderedStream.cpp)
-add_executable(deepestLeavesSum 1302.deepestLeavesSum.cpp)
-add_executable(maxEqualFreq 1224.maxEqualFreq.cpp)
-add_executable(busyStudent 1450.busyStudent.cpp)
-add_executable(areAlmostEqual 1790.areAlmostEqual.cpp)
-add_executable(maxChunksToSorted 769.maxChunksToSorted.cpp)
-add_executable(totalFruit 904.totalFruit.cpp)
-add_executable(countEven 2180.countEven.cpp)
-add_executable(countPrimeSetBits 762.countPrimeSetBits.cpp)
-add_executable(findClosest findClosest.cpp)
-add_executable(maxScore 1422.maxScore.cpp)
-add_executable(maxScoreWords 1255.maxScoreWords.cpp)
-add_executable(largestLocal 2373.largestLocal.cpp)
-add_executable(getFolderNames 1487.getFolderNames.cpp)
-add_executable(minNumberOfHours 2383.minNumberOfHours.cpp)
-add_executable(1615.maximalNetworkRank 1615.maximalNetworkRank.cpp)
-add_executable(2488.countSubarrays 2488.countSubarrays.cpp)
-add_executable(1616.checkPalindromeFormation 1616.checkPalindromeFormation.cpp)
-add_executable(1626.bestTeamScore 1626.bestTeamScore.cpp)
-add_executable(1574.findLengthOfShortestSubarray 1574.findLengthOfShortestSubarray.cpp)
-add_executable(2395.findSubarrays 2395.findSubarrays.cpp)
